--- a/index.html
+++ b/index.html
@@ -1,18 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-us">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WDD230: Assignmment Portal</title>
+    <meta name="discription" content="Assignment portal for Okechukwu Prince in WDD 230: Web Frontend Development at Brigham Young University - Idaho">
+    <link rel="stylesheet" href="CSS/style.css">
+
 </head>
 <body>
     <header>
-        <h1 class="title">WDD230: Assignmment Portal</h1>
+        <h1 class="name">Okechukwu Prince Ndubuisi</h1>
+        <h2 class="class">WDD230: Assignmment Portal</h2>
     </header>
     <main>
-        <img src="https://cdn.glitch.com/a243ddb3-c457-4f27-a846-c47dd9a27284%2FCutPaste_2021-08-25_13-59-54-689.jpg?v=1630324093646" alt="Logo image">
-        <h3 class="lower"></h3>
+        <img src="https://cdn.glitch.com/a243ddb3-c457-4f27-a846-c47dd9a27284%2FCutPaste_2021-08-25_13-59-54-689.jpg?v=1630324093646" alt="Okechukwu's pic">
+        <nav>
+            <ul>
+                <li><p>Lesson 01:</p><a href="https://byui.instructure.com/courses/165314/modules/items/21537704">Course Assignment Portal</a>
+                <li><p>Lesson 01:</p><a href="https://byui.instructure.com/courses/165314/modules/items/21537716">Design Principles Document</a>
+            </ul>
+            
+        </nav>
     </main>
     <footer>
         <p>&copy;2021 | Prince Okechukwu | Lagos |</p>
