--- a/index.html
+++ b/index.html
@@ -4,29 +4,37 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Okechukwu Prince Ndubuisi">    
     <title>WDD230: Assignmment Portal</title>
     <meta name="discription" content="Assignment portal for Okechukwu Prince in WDD 230: Web Frontend Development at Brigham Young University - Idaho">
+    <link rel="stylesheet" href="CSS/normalize.css">
     <link rel="stylesheet" href="CSS/style.css">
 
 </head>
 <body>
-    <header>
-        <h1 class="name">Okechukwu Prince Ndubuisi</h1>
-        <h2 class="class">WDD230: Assignmment Portal</h2>
-    </header>
-    <main>
-        <img src="https://cdn.glitch.com/a243ddb3-c457-4f27-a846-c47dd9a27284%2FCutPaste_2021-08-25_13-59-54-689.jpg?v=1630324093646" alt="Okechukwu's pic">
-        <nav>
+    <div id="content">
+        <header>
+            <h1 class="name">Okechukwu Prince Ndubuisi</h1>
+            <div class="profile-pic"><img src="images/....." alt="Okechukwu's profile pic"></div>
+        </header>
+        <main>
+            <h2 class="class-name">WDD230: Assignmment Portal</h2>
             <ul>
                 <li><p>Lesson 01:</p><a href="https://byui.instructure.com/courses/165314/modules/items/21537704">Course Assignment Portal</a>
                 <li><p>Lesson 01:</p><a href="https://byui.instructure.com/courses/165314/modules/items/21537716">Design Principles Document</a>
             </ul>
-            
-        </nav>
-    </main>
-    <footer>
-        <p>&copy;2021 | Prince Okechukwu | Lagos |</p>
-        <a target="blank" href="https://www.byui.edu/online">BYUI Online Learning</a>
-    </footer>
+                
+        </main>
+        <footer>
+            <ul>
+                <li class="@copy">&copy; <span id="current-year">Current year</span> | Prince Okechukwu | Lagos |</li>
+                <li><a target="blank" href="https://www.byui.edu/online">BYUI Online Learning</a></li>
+            </ul>
+            <div class="last-update">
+                Last Updated: <span id="last-modified">Date and time</span>
+            </div>
+        </footer>
+    </div>
+    <script src="javascript/script.js"></script>
 </body>
 </html>
