--- a/index.html
+++ b/index.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
 <html lang="en-us">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="author" content="Okechukwu Prince Ndubuisi">    
+    <meta charset="UTF-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta name="author" content="Okechukwu Prince Ndubuisi"/>    
     <title>WDD230: Assignmment Portal</title>
-    <meta name="discription" content="Assignment portal for Okechukwu Prince in WDD 230: Web Frontend Development at Brigham Young University - Idaho">
-    <link rel="stylesheet" href="CSS/normalize.css">
-    <link rel="stylesheet" href="CSS/style.css">
+    <meta name="discription" content="Assignment portal for Okechukwu Prince in WDD 230: Web Frontend Development at Brigham Young University - Idaho"/>
+    <link rel="stylesheet" href="CSS/normalize.css"/>
+    <link rel="stylesheet" href="CSS/style.css"/>
 
 </head>
 <body>
     <div id="content">
         <header>
             <h1 class="name">Okechukwu Prince Ndubuisi</h1>
-            <div class="profile-pic"><img src="images/....." alt="Okechukwu's profile pic"></div>
+            <div class="profile-pic"><img src="images/profilepics.jpg" alt="Okechukwu's profile pic"></div>
         </header>
         <main>
             <h2 class="class-name">WDD230: Assignmment Portal</h2>
@@ -27,7 +27,7 @@
         </main>
         <footer>
             <ul>
-                <li class="@copy">&copy; <span id="current-year">Current year</span> | Prince Okechukwu | Lagos |</li>
+                <li class="copy">&copy; <span id="current-year">Current year</span> | Prince Okechukwu | Lagos |</li>
                 <li><a target="blank" href="https://www.byui.edu/online">BYUI Online Learning</a></li>
             </ul>
             <div class="last-update">
