--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div id="content">
         <header>
             <h1 class="name">Okechukwu Prince Ndubuisi</h1>
-            <div class="profile-pic"><img src="images/profilepics.jpg" alt="Okechukwu's profile pic"></div>
+            <div class="profile-pic"><img src="images/my-image.jpg" alt="Okechukwu's profile pic"></div>
         </header>
         <main>
             <h2 class="class-name">WDD230: Assignmment Portal</h2>
