--- a/index.html
+++ b/index.html
@@ -15,16 +15,16 @@
     <div id="content">
         <header>
             <h1 class="name">Okechukwu Prince Ndubuisi</h1>
-            <div class="profile-pic"><img src="images/my-image.jpg" alt="Okechukwu's profile pic"></div>
         </header>
         <main>
-            <h2 class="class-name">WDD230: Assignmment Portal</h2>
-            <ul>
-                <li><p>Lesson 01:</p><a href="https://byui.instructure.com/courses/165314/modules/items/21537704">Course Assignment Portal</a>
-                <li><p>Lesson 01:</p><a href="https://byui.instructure.com/courses/165314/modules/items/21537716">Design Principles Document</a>
-            </ul>
-                
-        </main>
+            <div class="profile-pic"><img src="images/my-image.jpg" alt="Okechukwu's profile pic"></div>
+           <h2 class="class-name">WDD230: Assignmment Portal</h2>
+             <ul>
+                 <li>Lesson 01: <a href="https://byui.instructure.com/courses/165314/modules/items/21537704">Course Assignment Portal</a>
+                 <li>Lesson 01: <a href="https://byui.instructure.com/courses/165314/modules/items/21537716">Design Principles Document</a>
+             </ul>
+                 
+         </main>
         <footer>
             <ul>
                 <li class="copy">&copy; <span id="current-year">Current year</span> | Prince Okechukwu | Lagos |</li>
