--- a/index.html
+++ b/index.html
@@ -7,38 +7,34 @@
     <meta name="author" content="Okechukwu Prince Ndubuisi"/>    
     <title>WDD230: Assignmment Portal</title>
     <meta name="discription" content="Assignment portal for Okechukwu Prince in WDD 230: Web Frontend Development at Brigham Young University - Idaho"/>
-    <link rel="stylesheet" href="normalize.css"/>
-    <link rel="stylesheet" href="style.css"/>
+    <link rel="stylesheet" href="CSS/normalize.css"/>
+    <link rel="stylesheet" href="CSS/style.css"/>
 
 </head>
 <body>
     <div id="content">
         <header>
-            <h1 class="name">Okechukwu N. Prince</h1>
+            <h1 class="name">Okechukwu Prince Ndubuisi</h1>
             <div class="profile-pic"><img src="images/my-image.jpg" alt="Okechukwu's profile pic"></div>
         </header>
         <main>
-          <h2 class="class-name">WDD230: Assignmment Portal</h2>
-            <ul class="links">
-                <li>
-                  Lesson 01: 
-                  <a href="https://byui.instructure.com/courses/165314/modules/items/21537704">Course Assignment Portal</a>
-                <li>
-                  Lesson 01: 
-                  <a href="https://byui.instructure.com/courses/165314/modules/items/21537716">Design Principles Document</a>
+            <h2 class="class-name">WDD230: Assignmment Portal</h2>
+            <ul>
+                <li><p>Lesson 01:</p><a href="https://byui.instructure.com/courses/165314/modules/items/21537704">Course Assignment Portal</a>
+                <li><p>Lesson 01:</p><a href="https://byui.instructure.com/courses/165314/modules/items/21537716">Design Principles Document</a>
             </ul>
                 
         </main>
         <footer>
             <ul>
-                <li class="copy">&copy; <span id="current-year">Current year</span> | Okechukwu Prince | Lagos |
-                <a target="blank" href="https://www.byui.edu/online">BYUI Online Learning</a></li>
+                <li class="copy">&copy; <span id="current-year">Current year</span> | Prince Okechukwu | Lagos |</li>
+                <li><a target="blank" href="https://www.byui.edu/online">BYUI Online Learning</a></li>
             </ul>
             <div class="last-update">
                 Last Updated: <span id="last-modified">Date and time</span>
             </div>
         </footer>
     </div>
-    <script src="script.js"></script>
+    <script src="javascript/script.js"></script>
 </body>
 </html>
