--- a/index.html
+++ b/index.html
@@ -9,12 +9,15 @@
     <meta name="discription" content="Assignment portal for Okechukwu Prince in WDD 230: Web Frontend Development at Brigham Young University - Idaho"/>
     <link rel="stylesheet" href="CSS/normalize.css"/>
     <link rel="stylesheet" href="CSS/style.css"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Nosifer&family=Overlock:ital@1&display=swap" rel="stylesheet">
 
 </head>
 <body>
     <div id="content">
         <header>
-            <h1 class="name">Okechukwu Prince Ndubuisi</h1>
+            <h1 class="name">Okechukwu P. Ndubuisi</h1>
             <div class="profile-pic"><img src="images/my-image.jpg" alt="Okechukwu's profile pic"></div>
         </header>
         <main>
