--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </header>
         <main>
             <h2 class="class-name">WDD230: Assignmment Portal</h2>
-            <ul>
+            <ul class="links">
                 <li><p>Lesson 01:</p><a href="https://byui.instructure.com/courses/165314/modules/items/21537704">Course Assignment Portal</a>
                 <li><p>Lesson 01:</p><a href="https://byui.instructure.com/courses/165314/modules/items/21537716">Design Principles Document</a>
             </ul>
