--- a/index.html
+++ b/index.html
@@ -21,23 +21,22 @@
             <div class="profile-pic"><img src="images/my-image.jpg" alt="Okechukwu's profile pic"></div>
             <h1 class="name">Okechukwu P. Ndubuisi</h1>
         </header>
-        <main>
-            <h2 class="class-name">WDD230: Assignmment Portal</h2>
-            <ul class="links">
-                <li><p>Lesson 01:</p><a href="https://byui.instructure.com/courses/165314/modules/items/21537704">Course Assignment Portal</a>
-                <li><p>Lesson 01:</p><a href="https://byui.instructure.com/courses/165314/modules/items/21537716">Design Principles Document</a>
-            </ul>
-                
-        </main>
-        <footer>
-            <ul>
-                <li class="copy">&copy; <span id="current-year">Current year</span> | Prince Okechukwu | Lagos |</li>
-                <li><a target="blank" href="https://www.byui.edu/online">BYUI Online Learning</a></li>
-            </ul>
-            <div class="last-update">
-                Last Updated: <span id="last-modified">Date and time</span>
-            </div>
-        </footer>
-    </div>
-</body>
+       <main>
+          <h2>WDD 230: Assignment Portal</h2>
+          <hr>
+          <ul>
+             <li>Lesson 01: <a href="index.html">Course Assignments Portal</a></li>
+             <li>Lesson 02: <a href="design-principles.html">Design Principles Document</a></li>
+             <li>...</li>
+          </ul>
+       </main>
+       <footer>
+          <div id="@copy">
+             <p>&copy; <span id = "currentYear"></span> | Catalina Petcu | Romania | <a href = "https://www.byui.edu/online">BYU-I Online Learning</a></p>
+          </div>
+          <div id="dateModified">
+             <p> Last updated: <span id = "lastModified"></span></p>
+          </div>
+       </footer>
+   </body>
 </html>
