--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
           </ul>
        </main>
        <footer>
-          <div id="@copy">
-             <p>&copy; <span id = "currentYear"></span> | Catalina Petcu | Romania | <a href = "https://www.byui.edu/online">BYU-I Online Learning</a></p>
+          <div class="@copy">
+             <p>&copy; <span id="current-year">Current year</span> | Prince Okechukwu | Lagos | <a href = "https://www.byui.edu/online">BYU-I Online Learning</a></p>
           </div>
-          <div id="dateModified">
-             <p> Last updated: <span id = "lastModified"></span></p>
+          <div class="last-update">
+             <p> Last Updated: <span id="last-modified">Date and time</span></p>
           </div>
        </footer>
    </body>
