--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@
         </header>
        <main>
           <h2>WDD 230: Assignment Portal</h2>
-          <hr>
-          <ul>
+          <ul class="links">
              <li>Lesson 01: <a href="index.html">Course Assignments Portal</a></li>
              <li>Lesson 02: <a href="design-principles.html">Design Principles Document</a></li>
              <li>...</li>
@@ -35,7 +34,7 @@
              <p>&copy; <span id="current-year">Current year</span> | Prince Okechukwu | Lagos | <a href = "https://www.byui.edu/online">BYU-I Online Learning</a></p>
           </div>
           <div class="last-update">
-             <p> Last Updated: <span id="last-modified">Date and time</span></p>
+              Last Updated: <span id="last-modified">Date and time</span>
           </div>
        </footer>
    </body>
