--- a/index.html
+++ b/index.html
@@ -30,12 +30,13 @@
           </ul>
        </main>
        <footer>
-          <div class="@copy">
-             <p>&copy; <span id="current-year">Current year</span> | Prince Okechukwu | Lagos | <a href = "https://www.byui.edu/online">BYU-I Online Learning</a></p>
-          </div>
-          <div class="last-update">
-              Last Updated: <span id="last-modified">Date and time</span>
-          </div>
-       </footer>
+            <ul>
+                <li class="copy">&copy; <span id="current-year">Current year</span> | Prince Okechukwu | Lagos |</li>
+                <li><a target="blank" href="https://www.byui.edu/online">BYUI Online Learning</a></li>
+            </ul>
+            <div class="last-update">
+                Last Updated: <span id="last-modified">Date and time</span>
+            </div>
+        </footer>
    </body>
 </html>
