--- a/index.html
+++ b/index.html
@@ -30,10 +30,9 @@
           </ul>
        </main>
        <footer>
-            <ul>
-                <li class="copy">&copy; <span id="current-year">Current year</span> | Prince Okechukwu | Lagos |</li>
-                <li><a target="blank" href="https://www.byui.edu/online">BYUI Online Learning</a></li>
-            </ul>
+            <div class="copy">
+                <p>&copy; <span id="current-year">Current year</span> | Prince Okechukwu | Lagos | <a target="blank" href="https://www.byui.edu/online">BYUI Online Learning</a></p>
+            </div>
             <div class="last-update">
                 Last Updated: <span id="last-modified">Date and time</span>
             </div>
