--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           </ul>
        </main>
        <footer>
-            <ul> class="copy">
+            <ul class="copy">
                 <li>&copy; <span id="current-year">Current year</span> | Prince Okechukwu | Lagos | <a target="blank" href="https://www.byui.edu/online">BYUI Online Learning</a></li>
             </ul>
             <div class="last-update">
