--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nosifer&family=Overlock:ital@1&display=swap" rel="stylesheet">
-    <script src="javascript/script.js"></script>
+    <script defer src="javascript/script.js"></script>
 
 </head>
 <body>
