--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <ul class="copy">
                 <li>&copy; <span id="current-year">Current year</span> | Prince Okechukwu | Lagos | <a target="blank" href="https://www.byui.edu/online">BYUI Online Learning</a></li>
             </ul>
-            <div class="last-checked">
+            <div class="last-update">
                 Last Updated: <span id="last-modified">Date and time</span>
             </div>
         </footer>
