--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <h2>WDD 230: Assignment Portal</h2>
           <ul class="links">
              <li>Lesson 01: <a href="index.html">Course Assignments Portal</a></li>
-             <li>Lesson 02: <a href="design-principles.html">Design Principles Document</a></li>
+             <li>Lesson 02: <a href="design-principles/design-principles.html">Design Principles Document</a></li>
              <li>...</li>
           </ul>
        </main>
