Finished design principles

--- a/design-principles/design-principles.html
+++ b/design-principles/design-principles.html
@@ -13,6 +13,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Carter+One&family=Overlock:ital@1&display=swap" rel="stylesheet">    <script defer src="javascript/script.js"></script>
+    <script defer src="javascript/datem.js"></script>
 </head>
 <body>
     <div id="container">
