--- a/design-principles/design-principles.html
+++ b/design-principles/design-principles.html
@@ -29,20 +29,20 @@
             </div>
             <div class="example">
                 <h3>Fitt's Law</h2>
-                    <h4>ASOS</h4>
+                    <h4>Asos</h4>
                     <p>Interactive elements or button are big, closer and clickable to carry out the assigned action without taking long to interact with elements. <a href="https://www.asos.com/" target="_blank">Visit site here</a>.</p>
                     <img src="images/Asos.jpg" alt="Picture-2">
             </div>
             <div class="example">
                 <h3>Rule of Thirds</h2>
-                    <h4>GAITHERBURG</h4>
+                    <h4>Gaithersburg</h4>
                     <p>Images used here are visually appealing and communicate ideas to users faster. <a href="https://www.gaithersburgmd.gov/about-us/city-facilities/miniature-golf-course" target="_blank">Visit site here</a>.</p>
                     <img src="images/Golfing.png" alt="Picture-3">
             </div>
         </main>
         <footer>
             <ul class="copy">
-                <li>&copy; <span id="current-year">Current year</span> | Prince Okechukwu | Lagos | <a target="blank" href="https://www.byui.edu/online">BYUI Online Learning</a></li>
+                <p>&copy; <span id="current-year">Current year</span> | Prince Okechukwu | Lagos | <a target="blank" href="https://www.byui.edu/online">BYUI Online Learning</a></p>
             </ul>
             <div class="last-update">
                 Last Updated: <span id="last-modified">Date and time</span>
