--- a/design-principles/design-principles.html
+++ b/design-principles/design-principles.html
@@ -19,6 +19,7 @@
     <div id="container">
         <header>
             <h1>Design Principles</h1>
+            <h2>Okechukwu Prince</h2>
         </header>
         <main>
             <div class="example">
