--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
        <main>
           <h2>WDD 230: Assignment Portal</h2>
           <ul class="links">
-             <li>Lesson 01: <a href="index.html">Course Assignments Portal</a></li>
-             <li>Lesson 02: <a href="design-principles/design-principles.html">Design Principles Document</a></li>
+             <li>Lesson 01: <a href="design-principles/design-principles.html">Design Principles Document</a></li>
+             <li>Lesson 02: <a href="Lesson2/index.html">The Weather Site</a></li>
              <li>...</li>
           </ul>
        </main>
