--- a/Lesson2/index.html
+++ b/Lesson2/index.html
@@ -7,7 +7,7 @@
     <title>Okechukwu: Website Plannain</title>
     <meta name="discription" content="Laying out plans for weather website assignment by Okechukwu Prince in WDD 230: Brigham Young University - Idaho"/>
     <link rel="stylesheet" href="site-plan.css"/>
-    <script defer src="design-principles/javascript/datem.js"></script>
+    <script defer src="javascript/script.js"></script>
 </head>
 <body>
   <div id="main">
@@ -31,7 +31,7 @@
     <main>
       <section>
         <h2>My Logo</h2>
-        <img src="images/weather-logo.png" alt="logo image">
+        <img src="Images/weather1.png" alt="logo image">
         <p>The logo design for this website is visually appealing and it represents the brief purpose 
             of this website, the colors.
         </p>
