--- a/Lesson2/target-audience.html
+++ b/Lesson2/target-audience.html
@@ -33,7 +33,7 @@
           <h2>No.1 Persona</h2>
         <table>
           <tr><th>Persona: </th><td>Coorperate Farmer</td></tr>
-          <tr><th>Photo: </th><td><img src="images/weather-logo.png" alt="logo image"></td></tr>
+          <tr><th>Photo: </th><td><img src="Images/pic1.jpg" alt="logo image"></td></tr>
           <tr><th>Fictional Name: </th><td>Azikewe Caroline</td></tr>
           <tr><th>Job title/ Major Responsibility: </th><td>Site Supervisor</td></tr>
           <tr><th>Demographics: </th><td><ul><li>47 years old</li><li>Married</li><li>Mother of 6 children</li><li>Acquired a Bs in Agricultural Science</li></ul></td></tr>
@@ -57,7 +57,7 @@
           <h2>No.2 Persona</h2>
         <table>
           <tr><th>Persona: </th><td>An Entrepreneur</td></tr>
-          <tr><th>Photo: </th><td><img src="images/weather-logo.png" alt="logo image"></td></tr>
+          <tr><th>Photo: </th><td><img src="Images/pic2.jpg" alt="logo image"></td></tr>
           <tr><th>Fictional Name: </th><td>Ndike Destiny </td></tr>
           <tr><th>Job title: </th><td>CEO, Ndikes fashion Wears</td></tr>
           <tr><th>Demographics: </th><td><ul><li>38 years old</li><li>Single</li><li>Has 3 siblings</li><li>O'Level cerificate</li></ul></td></tr>
