--- a/Lesson2/target-audience.html
+++ b/Lesson2/target-audience.html
@@ -7,7 +7,7 @@
     <title>Okechukwu: Website Plans</title>
     <meta name="discription" content="Laying out plans for a new website assignment by Okechukwu Prince in WDD 230: Brigham Young University - Idaho"/>
     <link rel="stylesheet" href="site-plan.css"/>
-    <script defer src="design-principles/javascript/datem.js"></script>
+    <script defer src="okechukwup..github.io/javascript/script.js"></script>
 </head>
 <body>
   <div id="audience">
